corrected menu spacing

--- a/game-list/css/header/_header.scss
+++ b/game-list/css/header/_header.scss
@@ -1,9 +1,9 @@
 
 
 #header {
-  width: 100vw;
+  width: 100%;
   height: 8rem;
-  position: relative;
+  position: fixed;
   display: grid;
   grid-template-columns: 18rem 1fr 18rem;
   //grid-template-rows: 3rem;
@@ -34,13 +34,19 @@
 
 .menu {
   font-family: 'Yanone Kaffeesatz', sans-serif;
+  text-transform: uppercase;
+ 
 
   li {
     cursor: pointer;
   }
 
   li:not(:last-child){
-    margin-right: 5rem;
+    margin-right: 6rem;
+
+    @media (max-width: 900px) {
+      margin-right: 3rem;
+    }
   }
 
 }
@@ -53,15 +59,15 @@
 
   img {
     background-color: rgb(83, 85, 84);
-    border-radius: 1.5rem;
-    width: 2.5rem;
-    height: 2.5rem;
+    border-radius: 1rem;
+    width: 2rem;
+    height: 2rem;
 
     margin-right: 1.2rem;
     
   }
   label {
     font-family: 'Yanone Kaffeesatz', sans-serif;
-    font-size: 1.6rem;
+    font-size: 1.4rem;
   }
 }
